# binance_api

./: .gitignore  consumer.py  docker-compose.yaml  pyproject.toml
init-scripts/postgres/: init.sql
src/: __main__.py  binance_connector.py  manager.py  producer.py  schemas.py  settings.py
src/common/: dependeny_manager.py
src/database/: database.py
src/database/models/: __init__.py  base.py  flow.py  pairs.py  trading_platforms.py
src/telegram/: bot.py  schemas.py
src/trade/: base.py  binance_client.py
