[tool.poetry]
name = "binance-api"
version = "0.1.0"
description = ""
authors = ["nbezmaternykh <nbezmaternykh@7tech.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
binance-connector = "^3.5.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
